# simplisp_extensions

./: Cargo.toml
src/: add_extensions.rs  lib.rs
src/error/: mod.rs
src/funcs/: mod.rs
src/funcs/casts/: f32.rs  f64.rs  i16.rs  i32.rs  i64.rs  i8.rs  isize.rs  mod.rs  u16.rs  u32.rs  u64.rs  u8.rs  usize.rs
src/funcs/common/: if_lisp.rs  let_lisp.rs  mod.rs  repeat.rs
src/funcs/ops/: add.rs  bitand.rs  bitor.rs  bitxor.rs  div.rs  eq.rs  ge.rs  gt.rs  le.rs  lt.rs  math_op.rs  mod.rs  mul.rs  ne.rs  not.rs  rem.rs  shl.rs  shr.rs  sub.rs
